Complete member searchFiltering  part